--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-# Compiled class file
-*.class
+# Gradle
+.gradle/
+build/
 
-# Log file
-*.log
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Compiled class files
+*.class
 
 # BlueJ files
 *.ctxt
@@ -10,15 +17,16 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs
 hs_err_pid*
-replay_pid*
+
+# Cache of project
+.gradletasknamecache
+
+# Workaround for IntelliJ IDEA issue
+gradle/wrapper/gradle-wrapper.properties
