--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
